fix: scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -38,9 +38,13 @@ a {
   text-decoration: none;
 }
 
-html::-webkit-scrollbar {
-  width: 0;
+body::-webkit-scrollbar {
   display: none;
+}
+
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 body {
